--- a/test/favicon.html
+++ b/test/favicon.html
@@ -1,6 +1,6 @@
 ---
 layout: empty
-title: Ocramius' favicon
+title: Martin' favicon
 published: true
 ---
-<img src="/marco-pivetta-ocramius.gif" style="width: 100%;" alt="Ocramius' avatar">
+<img src="/marco-pivetta-ocramius.gif" style="width: 100%;" alt="Martin' avatar">
