--- a/resume.html
+++ b/resume.html
@@ -1,58 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <title>Resume</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <meta name="description" content=""/>
-        <meta name="author" content="Martin Shwalbe"/>
-        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.0.4/css/bootstrap-combined.min.css" rel="stylesheet"/>
-        <link href="/js/google-code-prettify/prettify.css" rel="stylesheet"/>
-        <link href="/css/style.css" rel="stylesheet"/>
-	    <link href="/css/docs.css" rel="stylesheet"/>
-        <link href="/css/resume.css" rel="stylesheet"/>
-    </head>
-    <body data-spy="scroll" data-target=".subnav" data-offset="50">
-        <div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
-            <a class="brand" href="http://hounddog.github.com">Martin Shwalbe</a>
-            <div class="nav-collapse">
-                <ul class="nav">
-                    <li class="">
-                        <a href="http://hounddog.github.com">Home</a>
-                    </li>
-                    <li class="divider-vertical"></li>
-                    <li class="">
-                        <a href="http://github.com/hounddog" target="_blank">GitHub</a>
-                    </li>
-                    <li class="divider-vertical"></li>
-                    <li class="">
-                        <a href="http://linkedin.com/in/mshwalbe" title="Go to Martin Shwalbe's LinkedIn profile" target="_blank">LinkedIn</a>
-                    </li>
-                    <li class="divider-vertical"></li>
-                    <li class="">
-                        <a href="http://www.twitter.com/mshwalbe" title="Martin Shwalbe's Twitter profile" target="_blank">Twitter</a>
-                    </li>
-                    <li class="divider-vertical"></li>
-                    <li class="">
-                        <a href="/resume" title="Martin Shwalbe's Resume">Resume</a>
-                    </li>
-                    <li class="divider-vertical"></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
+---
+layout: resume
+title: "Resume"
+permalink: /resume/
+---
 
-        <div class="container">
-            <div class="resume">
-                <h1>Martin Shwalbe</h1>
+<h1>Martin Shwalbe</h1>
 <p><strong>Senior Software Engineer | Beziers, France</strong></p>
 
 <h2><img src="/img/Document-icon.png" /> </span>Summary</h2>
@@ -188,30 +140,3 @@ ITAG is a leading drilling contractor and manufacturing plant with more than 400
     <li>Technical certification from BMW for completion of car mechanic 1999</li>
     <li>Completed Hauptschule (Higher Secondary School) 1995,</li>
 </ul>
-            </div>
-
-            <footer class="footer">
-	<p style="text-align:center">Resume updated on October 16, 2012</p>
-</footer>
-
-        </div>
-
-        <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.0.4/js/bootstrap.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/prettify/188.0.0/prettify.js"></script>
-<script src="/js/google-code-prettify/prettify-prepro.js"></script>
-<script src="/js/jquery.githubwidget.min.js"></script>
-<script src="/js/custom.js"></script>
-<script>$(prettyPrint);</script>
-<script>
-    var disqus_shortname = 'hounddog-dev';
-    var disqus_identifier = '/resume/';
-    var disqus_url = 'http://hounddog.github.com//resume/';
-</script>
-<script src="http://hounddog-dev.disqus.com/count.js"></script>
-<script src="http://hounddog-dev.disqus.com/embed.js"></script>
-<script src="http://platform.twitter.com/widgets.js"></script>
-<script src="https://apis.google.com/js/plusone.js"></script>
-<script src="/js/analytics.js"></script>
-    </body>
-</html>
