--- a/resume.html
+++ b/resume.html
@@ -134,7 +134,7 @@ ITAG is a leading drilling contractor and manufacturing plant with more than 400
 <p><em>Mechanical Support Executive at BMW, Celle, Germany</em>         <code>01/1999 - 08/2000</code></p>
 <p><em>Trainee Mechanic at BMW, Celle, Germany</em>                     <code>08/1995 - 01/1999</code></p>
 
-<h2><img src="/img/system-star-icon.png"/> EDUCATIONAL QUALIFICATION</h2>
+<h2><img src="/img/system-star-icon.png"/> Educational Qualifications</h2>
 <ul class="unstyled">
     <li>Fachinformatiker (Software Application Engineering) from Profil GmbH in January 2006,</li>
     <li>Technical certification from BMW for completion of car mechanic 1999</li>
