--- a/resume.html
+++ b/resume.html
@@ -31,8 +31,9 @@ Immense passion to explore new technologies while continuing to achieve operatio
     <li><strong>Best Practices:</strong>  Extensive knowledge of OOP principles and design patterns. Strong proponent of MVC.</li>
     <li><strong>Community Involvement:</strong>  Contributor to various open source projects and communities such as Zend Framework.</li>
     <li><strong>Web Services:</strong> XML, JSON-RPC and REST, 
-    <li>V<strong>ersion Control:</strong> GIT and Subversion</li>
+    <li><strong>Version Control:</strong> GIT and Subversion</li>
     <li><strong>JavaScript frameworks:</strong> Dojo Toolkit</li>
+    <li><strong>Continuous Deployment:</strong> Jenkins and Phing</li>
 </ul>
 
 <h2><img src="/img/clock-select-remain-icon.png" /> Experience</h2>
@@ -92,22 +93,16 @@ Immense passion to explore new technologies while continuing to achieve operatio
 
 <h3>Joomla Projects</h3>
 <ul class="unstyled">
-    <li>http://darrell-hill.com</li>
-    <li>http://www.africaopportunities.net</li>
-    <li>http://afrifunding.com</li>
-    <li>http://www.fourinone.org</li>
-    <li>startoys.de</li>
-    <li>Virtuemart Online shop</li>
-    <li>http://www.schattenlabor.org</li>
+    <li><a href="http://www.fourinone.org">Four in One</a></li>
+    <li><a href="http://www.schattenlabor.org">Schattenlabor</a></li>
     <li class="sub">
         <ul class="unstyled">
             <li>Virtuemart Online Shop</li>
             <li>Jomsocial</li>
         </ul>
     </li>
-    <li>http://klavierunterricht-von-linden.de</li>
-    <li>http://step4kids.de</li>
-    <li>http://jobcenter-kreis-pinneberg.de</li>
+    <li><a href="http://klavierunterricht-von-linden.de">Klavierunterricht von Linden</a></li>
+    <li><a href="http://jobcenter-kreis-pinneberg.de">Jobcenter Kreis Pinneberg</a></li>
 </ul>
 
 <h3>Collabor</h3>
