Added ZF2 Rest tutorial

--- a/_posts/2012-11-06-using-traits-in-zend-framework-2.html
+++ b/_posts/2012-11-06-using-traits-in-zend-framework-2.html
@@ -5,16 +5,16 @@ category: Coding
 tags: Zend Framework Tutorial
 year: 2012
 month: 10
-day: 5
+day: 6
 published: true
 summary: Example of using  traits in Zend Framework 2
 ---
 
 <div class="row">
-  <p>
-    Today i want to show you the usefulness of Traits within ZF 2. Some of you like me are maybe wondering when you want to have the ServiceManager injected you always have to create something like this.
-  <p>
-  <pre class="prettyprint linemus lang-prepro">
+    <p>
+        Today i want to show you the usefulness of Traits within ZF 2. Some of you like me are maybe wondering when you want to have the ServiceManager injected you always have to create something like this.
+    </p>
+    <pre class="prettyprint linemus lang-prepro">
       namespace Application\Service;
 
       use Zend\ServiceManager\ServiceManagerAwareInterface;
@@ -36,7 +36,7 @@ summary: Example of using  traits in Zend Framework 2
            */
           public function getServiceManager()
           {
-              return $this->serviceManager;
+              return $this-&gt;serviceManager;
           }
 
           /**
@@ -47,23 +47,22 @@ summary: Example of using  traits in Zend Framework 2
            */
           public function setServiceManager(ServiceManager $serviceManager)
           {
-              $this->serviceManager = $serviceManager;
+              $this-&gt;serviceManager = $serviceManager;
               return $this;
           }
       }
+
     </pre>
     <p>
-      This you will probably be doing for many Services. The result... the code becomes bloated. We are not following DRY principles. Instead we are copying and pasting this code  all over the place. If the structure changes sometime in the future we have to also replace this everywhere.
-      </p>
-      <p> If you are using PHP 5.4 You are in luck as you can now use traits. I will not go into detail about traits as there are a good bunch of tutorials out there explaining these and the <a href="http://php.net/manual/en/language.oop5.traits.php" target="_blank">PHP Manual</a> is also quite extensive on this topic.
-      </p>
-      <p>
+        This you will probably be doing for many Services. The result... the code becomes bloated. We are not following DRY principles. Instead we are copying and pasting this code all over the place. If the structure changes sometime in the future we have to also replace this everywhere.
+    </p>
+    <p>
+        If you are using PHP 5.4 You are in luck as you can now use traits. I will not go into detail about traits as there are a good bunch of tutorials out there explaining these and the <a href="http://php.net/manual/en/language.oop5.traits.php" target="_blank">PHP Manual</a> is also quite extensive on this topic.
+    </p>
+    <p>
         I just want to show you a short example here on how you can actually benefit from them.
-      </p>
-        Let's get started creating a trait for ServiceManager. I assume here that you are using the <a href="https://github.com/zendframework/ZendSkeletonApplication">ZendSkeletonApplication</a>.
-      <p>
-
-      <pre class="prettyprint linemus lang-prepro">
+    </p>Let's get started creating a trait for ServiceManager. I assume here that you are using the <a href="https://github.com/zendframework/ZendSkeletonApplication">ZendSkeletonApplication</a>.
+    <pre class="prettyprint linemus lang-prepro">
 
         namespace Application\Provider;
 
@@ -83,7 +82,7 @@ summary: Example of using  traits in Zend Framework 2
            */
           public function getServiceManager()
           {
-              return $this->serviceManager;
+              return $this-&gt;serviceManager;
           }
 
           /**
@@ -94,17 +93,16 @@ summary: Example of using  traits in Zend Framework 2
            */
           public function setServiceManager(ServiceManager $serviceManager)
           {
-              $this->serviceManager = $serviceManager;
+              $this-&gt;serviceManager = $serviceManager;
               return $this;
           }
         }
-      </pre>
 
-      <p>
+    </pre>
+    <p>
         To use this we now go back to our Service and change it as follows:
-      </p>
-
-      <pre class="prettyprint linemus lang-prepro">
+    </p>
+    <pre class="prettyprint linemus lang-prepro">
 
         namespace Application\Service;
 
@@ -120,11 +118,11 @@ summary: Example of using  traits in Zend Framework 2
 
     </pre>
     <p>
-      And voila, we are now using all the methods from TraitServiceManager within our own service!
-      At the time of writing this Matthew Weier O'Phinney gave me the hint that a trait for EventManager is already existing. Thanks for that.
+        And voila, we are now using all the methods from TraitServiceManager within our own service! At the time of writing this Matthew Weier O'Phinney gave me the hint that a trait for EventManager is already existing. Thanks for that.
     </p>
-    <p>Let's implement that also in our Service. </p>
-
+    <p>
+        Let's implement that also in our Service.
+    </p>
     <pre class="prettyprint linemus lang-prepro">
 
         namespace Application\Service;
@@ -143,7 +141,10 @@ summary: Example of using  traits in Zend Framework 2
         }
 
     </pre>
-    <p>Now we have implement the functionality required for ServiceManager and EntityManager without needing to implement the getters/setter for these!</p>
-
-    <p>There are many other useful things for using Traits i can think of like DbMapper implementing a pagination etc etc etc. I hope you enjoyed this little excursion on How traits can be useful in your daily development. Happy Coding!
+    <p>
+        Now we have implement the functionality required for ServiceManager and EntityManager without needing to implement the getters/setter for these!
     </p>
+    <p>
+        There are many other useful things for using Traits i can think of like DbMapper implementing a pagination etc etc etc. I hope you enjoyed this little excursion on How traits can be useful in your daily development. Happy Coding!
+    </p>
+</div>
