Added tracking for analytics

--- a/_posts/2012-09-29-creating-my-page-with-jekyll.html
+++ b/_posts/2012-09-29-creating-my-page-with-jekyll.html
@@ -7,8 +7,7 @@ year: 2012
 month: 9
 day: 29
 published: true
-summary: A description of how and why I've moved to jekyll
-description: Creating my own page with jekyll
+summary: Creating my own page with jekyll
 ---
 
 <div class="row">
