--- a/_posts/2012-10-05-zend-framework-1.x-doctrine-migrations-2.x-how-to.html
+++ b/_posts/2012-10-05-zend-framework-1.x-doctrine-migrations-2.x-how-to.html
@@ -14,12 +14,12 @@ summary: A tutorial on how to setup Doctrine Migrations with Zend Framework 1
   <p>
     Hello everybody!
   </p>
-  
+
   <p>
-    PEM (on irc freenode #dojo) and me have worked hard to make something useful to you! 
+    PEM (on irc freenode #dojo) and me have worked hard to make something useful to you!
   </p>
   <p>
-    I'm pretty sure some of you already encountered that situation when you feel like poping your eyes out because of incomplete documentations, or lack of help/support... 
+    I'm pretty sure some of you already encountered that situation when you feel like poping your eyes out because of incomplete documentations, or lack of help/support...
     If you are reading this, you most likely were about to throw away your computer in anger... Fear not! We will try to save your day :)
   <p>
   <p>Just follow the steps :</p>
@@ -29,7 +29,7 @@ summary: A tutorial on how to setup Doctrine Migrations with Zend Framework 1
       You can have a look at my repository on github : <a href="https://github.com/PEM-FR/Doctrine2-ZendFramework1-Migrations-Setup" title="Doctrine Migration Scripts" target="_blank">Doctrine Migration Scripts for Zend Framework support</a>
     </li>
     <li>
-      You have now two choices : 
+      You have now two choices :
       <ul>
         <li>
           Integrates Migrations into your already existing Doctrine folder, in this path : Doctrine/DBAL/Migrations.
@@ -58,7 +58,7 @@ summary: A tutorial on how to setup Doctrine Migrations with Zend Framework 1
   </ul>
 
   <p>doctrine.php should look like that (DO NOT FORGET TO EDIT THE FILE AND CHANGE THE PATHS)</p>
-  <pre class="prettyprint linemus lang-prepro">
+  <pre class="prettyprint linenums lang-prepro">
   // Display errors ?
   //ini_set('display_errors', 1);
   //error_reporting(E_ALL | E_STRICT);
@@ -195,7 +195,7 @@ summary: A tutorial on how to setup Doctrine Migrations with Zend Framework 1
   <p>for some more information you might want to check this article : <a href="http://victimofbabylon.com/setting-up-doctrine-2-cli-with-zend-framework" title="Setting up doctrine 2 cli for zend framework" target="_blank">Setting up doctrine 2 cli for zend framework</a>
   <p>
   <p>We now have to tweak your Zend Framework application.ini file. Add these few lines :</p>
-  <pre class="prettyprint linemus lang-prepro">
+  <pre class="prettyprint linenums lang-prepro">
   ; ------------------------------------------------------------------------------
   ; Doctrine Migrations Configuration
   ; ------------------------------------------------------------------------------
@@ -208,11 +208,11 @@ summary: A tutorial on how to setup Doctrine Migrations with Zend Framework 1
   ;resources.doctrine.migration.migrations.migration1.class = "DoctrineMigrations\VersionNewMigration"
   </pre>
   <p>Now, try running from the scripts directory : </p>
-  <pre class="prettyprint linemus lang-sh">
+  <pre class="prettyprint linenums lang-sh">
   ~$ php doctrine.php list migrations
   </pre>
   <p>As a result, you should see the commands available, something like that :</p>
-  <pre class="prettyprint linemus lang-sh">
+  <pre class="prettyprint linenums lang-sh">
     Doctrine Command Line Interface version 2.2.1
 
     Usage:
