--- a/_posts/2012-11-06-using-traits-in-zend-framework-2.html
+++ b/_posts/2012-11-06-using-traits-in-zend-framework-2.html
@@ -14,45 +14,46 @@ summary: Example of using  traits in Zend Framework 2
     <p>
         Today i want to show you the usefulness of Traits within ZF 2. Some of you like me are maybe wondering when you want to have the ServiceManager injected you always have to create something like this.
     </p>
-    <pre class="prettyprint linemus lang-prepro">
-      namespace Application\Service;
+<pre class="prettyprint linenums">
+&lt;?php
+namespace Application\Service;
 
-      use Zend\ServiceManager\ServiceManagerAwareInterface;
-      use Zend\ServiceManager\ServiceManager;
+use Zend\ServiceManager\ServiceManagerAwareInterface;
+use Zend\ServiceManager\ServiceManager;
 
-      class MyService  implements ServiceManagerAwareInterface
-      {
-          /**
-           * @var ServiceManager
-           */
-          protected $serviceManager;
+class MyService  implements ServiceManagerAwareInterface
+{
+    /**
+     * @var ServiceManager
+     */
+    protected $serviceManager;
 
-          //implement some code here
+    //implement some code here
 
-          /**
-           * Retrieve service manager instance
-           *
-           * @return ServiceManager
-           */
-          public function getServiceManager()
-          {
-              return $this-&gt;serviceManager;
-          }
+    /**
+     * Retrieve service manager instance
+     *
+     * @return ServiceManager
+     */
+    public function getServiceManager()
+    {
+        return $this-&gt;serviceManager;
+    }
 
-          /**
-           * Set service manager instance
-           *
-           * @param ServiceManager $locator
-           * @return User
-           */
-          public function setServiceManager(ServiceManager $serviceManager)
-          {
-              $this-&gt;serviceManager = $serviceManager;
-              return $this;
-          }
-      }
+    /**
+     * Set service manager instance
+     *
+     * @param ServiceManager $locator
+     * @return User
+     */
+    public function setServiceManager(ServiceManager $serviceManager)
+    {
+        $this-&gt;serviceManager = $serviceManager;
+        return $this;
+    }
+}
+</pre>
 
-    </pre>
     <p>
         This you will probably be doing for many Services. The result... the code becomes bloated. We are not following DRY principles. Instead we are copying and pasting this code all over the place. If the structure changes sometime in the future we have to also replace this everywhere.
     </p>
@@ -62,85 +63,82 @@ summary: Example of using  traits in Zend Framework 2
     <p>
         I just want to show you a short example here on how you can actually benefit from them.
     </p>Let's get started creating a trait for ServiceManager. I assume here that you are using the <a href="https://github.com/zendframework/ZendSkeletonApplication">ZendSkeletonApplication</a>.
-    <pre class="prettyprint linemus lang-prepro">
+<pre class="prettyprint linenums lang-prepro">
+&lt;?php
+namespace Application\Provider;
 
-        namespace Application\Provider;
+use Zend\ServiceManager\ServiceManager;
 
-        use Zend\ServiceManager\ServiceManager;
+trait ProvidesServiceManager
+{
+  /**
+   * @var ServiceManager
+   */
+  protected $serviceManager;
 
-        trait ProvidesServiceManager
-        {
-          /**
-           * @var ServiceManager
-           */
-          protected $serviceManager;
+  /**
+   * Retrieve service manager instance
+   *
+   * @return ServiceManager
+   */
+  public function getServiceManager()
+  {
+      return $this-&gt;serviceManager;
+  }
 
-          /**
-           * Retrieve service manager instance
-           *
-           * @return ServiceManager
-           */
-          public function getServiceManager()
-          {
-              return $this-&gt;serviceManager;
-          }
-
-          /**
-           * Set service manager instance
-           *
-           * @param ServiceManager $locator
-           * @return User
-           */
-          public function setServiceManager(ServiceManager $serviceManager)
-          {
-              $this-&gt;serviceManager = $serviceManager;
-              return $this;
-          }
-        }
-
-    </pre>
+  /**
+   * Set service manager instance
+   *
+   * @param ServiceManager $locator
+   * @return User
+   */
+  public function setServiceManager(ServiceManager $serviceManager)
+  {
+      $this-&gt;serviceManager = $serviceManager;
+      return $this;
+  }
+}
+</pre>
     <p>
         To use this we now go back to our Service and change it as follows:
     </p>
-    <pre class="prettyprint linemus lang-prepro">
+    <pre class="prettyprint linenums lang-prepro">
+&lt;?php
+namespace Application\Service;
 
-        namespace Application\Service;
+use Zend\ServiceManager\ServiceManagerAwareInterface;
+use Application\Provider\ProvidesServiceManager;
 
-        use Zend\ServiceManager\ServiceManagerAwareInterface;
-        use Application\Provider\ProvidesServiceManager;
+class MyService  implements ServiceManagerAwareInterface
+{
+    use ProvidesServiceManager;// Insert Trait
 
-        class MyService  implements ServiceManagerAwareInterface
-        {
-            use ProvidesServiceManager;// Insert Trait
-
-            // implement code here....
-        }
-
-    </pre>
+    // implement code here....
+}
+</pre>
     <p>
         And voila, we are now using all the methods from TraitServiceManager within our own service! At the time of writing this Matthew Weier O'Phinney gave me the hint that a trait for EventManager is already existing. Thanks for that.
     </p>
     <p>
         Let's implement that also in our Service.
     </p>
-    <pre class="prettyprint linemus lang-prepro">
+<pre class="prettyprint linenums lang-prepro">
+&lt;?php
+namespace Application\Service;
 
-        namespace Application\Service;
+use Zend\EventManager\EventManagerAwareInterface;
+use Zend\ServiceManager\ServiceManagerAwareInterface;
 
-        use Zend\EventManager\EventManagerAwareInterface;
-        use Zend\ServiceManager\ServiceManagerAwareInterface;
+use Application\Provider\ProvidesServiceManager;
+use Zend\EventManager\ProvidesEvents;
 
-        use Application\Provider\ProvidesServiceManager;
-        use Zend\EventManager\ProvidesEvents;
+class MyService  implements ServiceManagerAwareInterface, EventManagerAwareInterface
+{
+    use ProvidesServiceManager, ProvidesEvents; //Insert Multiple Traits
 
-        class MyService  implements ServiceManagerAwareInterface, EventManagerAwareInterface
-        {
-            use ProvidesServiceManager, ProvidesEvents; //Insert Multiple Traits
-
-            // implement code here....
-        }
-
-    </pre>
+    // implement code here....
+}
+</pre>
     <p>
         Now we have implement the functionality required for ServiceManager and EntityManager without needing to implement the getters/setter for these!
     </p>
