--- a/_posts/2012-11-18-performance-in-zend-framework-2.html
+++ b/_posts/2012-11-18-performance-in-zend-framework-2.html
@@ -12,14 +12,22 @@ summary: A listing of options to improve Performance using Zend Framework 2
 
 <div class="row">
     <p>
-        I am going to list options here on how to improve the Performance. This will be an ongoing list wchich i will keep updated while doing performance improvements.
+        I am going to list options here on how to improve the Performance. This will be an ongoing list which i will keep updated while doing performance improvements.
     </p>
     <h1>Autoloader Classmap</h1>
-    <p>As described by Rob Allen on his <a href="http://akrabat.com/zend-framework-2/using-zendloaderautoloader/">Blog</a>.</>
+    <p>As described by Rob Allen on his <a href="http://akrabat.com/zend-framework-2/using-zendloaderautoloader/" target="_blank">Blog</a>.</>
     <pre>
 The class map autoloader is a high performance autoloader. It uses class maps, which are simply associative arrays of each classname to the name of the file disk that contains that class.
     </pre>
     This is a very simple process and takes just a few minutes to generate and include the classmaps for each module you have created.
+    <h2>Create Classmaps</h2>
+    <pre>
+As you can imagine, creating class maps manually would quickly get tiresome. To alleviate this, Zend Framework 2 provides a PHP script, classmap_generator.php in the `bin` directory that will do this for you. This tool will scan the entire directory from the current directory (or that specified via an option) and create a class map file for every class that it finds. It is used like this:
+
+prompt> path/to/zf2/bin/classmap_generator.php -w
+Creating class file map for library in '/var/www/project/library'...
+Wrote classmap file to '/var/www/project/library/autoload_classmap.php'
+    </pre>
 
     <h1>Template Map</h1>
     <p>Most people use the 'template_path_stack' during development. As pointed out by the <a href="http://framework.zend.com/manual/2.0/en/modules/zend.view.quick-start.html#configuration">manual</a>, this can introduce a performance expense.
