Updated modules blog

--- a/_posts/2012-11-30-there-is-a-module-for-that.html
+++ b/_posts/2012-11-30-there-is-a-module-for-that.html
@@ -11,10 +11,9 @@ summary: Why create your own modules if there is something existing. this post w
 ---
 
 <div class="row">
-    <p>This is a blog post greatly inspired by a slide that i have found created by Christophe Coevet, his slide can be found <a href="http://friendsofsymfony.github.com/slides/there_is_a_bundle_for_that.html">here</a>.</p>
+    <p>This is a blog post greatly inspired by a slide that I have found created by Christophe Coevet, his slide can be found <a href="http://friendsofsymfony.github.com/slides/there_is_a_bundle_for_that.html">here</a>.</p>
 
-    <p>I spend a lot of my time on #zftalk freenode.net helping people to solve their problems or just chatting away. One of the things i am noticing every day is that people despite our trys to help them keep building their own "custom" modules. Why?
-    I mean a very simple example for this is ZfcUser. Every day i see someone asking about authentication problem or how to create a login or even acl. When we tell them there is a module existing  we get the most diverse answers to this.</p>
+    <p>I spend a lot of my time on #zftalk freenode.net helping people to solve their problems or just chatting away. One of the things I am noticing every day is that people despite our tries to help them keep building their own "custom" modules. Why? I mean a very simple example for this is ZfcUser. Every day I see someone asking about authentication problem or how to create a login or even acl. When we tell them there is a module existing we get the most diverse answers to this.</p>
 
     <p> Some of these answers are:</p>
     <ul>
@@ -26,21 +25,22 @@ summary: Why create your own modules if there is something existing. this post w
     </ul>
     <p>Let's just take a look at some of these answers.</p>
 
-    <p><code>I Would need to learn this module</code> In my humble opinion. Yes, so what? I mean even if you build it yourself you have to invest time and effort to build your own solution to make it do what you want. Lot of people who answered this are also learning Zend Framework 2 but i see none of them building their own framework.</p>
+    <p><code>I Would need to learn this module</code> Yes, i absolutely agree but even if you build your own solution don't you have to invest time and effort also to make it do what you want? Lot of people who answered this are also learning Zend Framework 2 but I see none of them building their own framework.</p>
 
-    <p><code>I need a customized solution</code> This is mostly with reference to ZfcUser. I agree this module is not perfect but mostly it fits every need i can think of. It has been designed with scalability in mind so you can just change your form the way you require it or adapt your database to hold new information. If it still does not support the required feature you can also modify it and submit a pr to make it a better module.</p>
+    <p><code>I need a customized solution</code> This is mostly with reference to ZfcUser. I agree this module is not perfect but mostly it fits every need I can think of. It has been designed with scalability in mind so you can just change your form the way you require it or adapt your database to hold new information. If it still does not support the required feature you can also modify it and submit a pr to make it a better module.</p>
 
-    <p><code>I want to learn how the system works</code> No arguments against that but why learn how to build something that is existing? Why not try and build your own application in a fast way. Having an application up and running in no time gives me the greatest learning experience as i have this nice and cozy feeling when i see what i have accomplished in a short time instead of wasting hours trying to build something which is existing.</p>
+    <p><code>I want to learn how the system works</code> No arguments against that but why learn how to build something that is existing? Why not try and build your own application in a fast way. Having an application up and running in no time gives me the greatest learning experience as I have this nice and cozy feeling when I see what I have accomplished in a short time instead of wasting hours trying to build something which is existing.</p>
 
-    <p><code>I just need something simple</code> Again... most modules are designed with scalability in mind and most of them only solve the most basic use cases by default. What could be more simpler?</p>
+    <p><code>I just need something simple</code> Again... Most modules are designed with scalability in mind and mostly just solve the most basic use cases by default. What could be more simpler?
+</p>
 
-    <p><code>My boss does not pay me to learn/fix someone elses module</code> I don't know about you, but my boss also does not pay to sit around and build something which exists. My boss wants results and that as fast as possible. If i can show my boss that instead of building our own solution we can use some module and modify it to our needs which might take less time or even the same and justifying it by explaining that this has been tested by many people out of the community, he hardly never says no.</p>
+    <p><code>My boss does not pay me to learn/fix someone elses module</code>  I don't know about you, but my boss also does not pay to sit around and build something which exists. My boss wants results and that as fast as possible. If I can show my boss that instead of building our own solution we can use some module and modify it to our needs which might take less time or even the same and justifying it by explaining that this has been tested by many people out of the community, he hardly never says no.</p>
 
-    <p>Let's be honest, you or i might be thinking that we are the greatest programmers in the world but there is always someone better out there or someone who has some genious idea. Use the power of this great community, most of us are more then willing to help you find your module or even build one together with you if it does not exist.</p>
+    <p>Let's be honest, you or I might be thinking that we are the greatest programmers in the world but there is always someone better out there or someone who has some genius idea. Use the power of this great community, most of us are more then willing to help you find your module or even build one together with you if it does not exist.</p>
 
-    <p> The time of sitting alone and grumbling how the module could be made reusable is over. Invest your time to find a suitable module or even discuss with people on how to create a module that can be useful to the community. I personally cannot think of a greater feeling when someone comes and tells me "hey i used your module and it just took me a few minutes to get up and running". Having helped myself and someone else by creating a reusable module is more then i could ask for.</p>
+    <p> The time of sitting alone and grumbling how the module could be made reusable is over. Invest your time to find a suitable module or even discuss with people on how to create a module that can be useful to the community. I personally cannot think of a greater feeling when someone comes and tells me "hey I used your module and it just took me a few minutes to get up and running". Having helped myself and someone else by creating a reusable module is more then I could ask for.</p>
 
-    <p>This brings me to another point. As i am currently building the <a href="http://modules.zendframework.com">modules.zendframework.com</a> website i mostly also observe every module that get's submitted there. It's really great to see all these contributions and new modules popping up on a daily basis. Again, check first if a module is existing. I see a lot of modules solving problems which others already have.</p>
+    <p>This brings me to another point. As I am currently building the <a href="http://modules.zendframework.com">modules.zendframework.com</a> website I mostly also observe every module that get's submitted there. It's really great to see all these contributions and new modules popping up on a daily basis. Again, check first if a module is existing. I see a lot of modules solving problems which others already have.</p>
 
     <h1> Search before you create/submit a module!!!</h1>
 
@@ -98,7 +98,7 @@ script:
 <h1>How To extend a Module</h1>
 
 <p>You can nearly override anything with in a module from views to controller over services and mappers</p>
-<p>Create your own module which can extend/modify the original module. All you need to do is register it after the original Module in <<code>application.config.php</code></p>
+<p>Create your own module which can extend/modify the original module. All you need to do is register it after the original Module in <code>application.config.php</code></p>
 
 <pre class="prettyprint lang-prepro">
 &lt;?php
@@ -121,7 +121,7 @@ return array(
     <h2>Override a template</h2>
     <p> create the same view structure as the OriginalModule and place your custom templates there. Example:</p>
 
-    <h3>Original Module</h3>
+    <h3>OriginalModule</h3>
 <pre class="prettyprint lang-prepro">
 Config:
 'view_manager' => array(
@@ -137,7 +137,7 @@ view/
             index.phtml
 </pre>
 
-<h3>My Module</h3>
+<h3>MyModule</h3>
 <pre class="prettyprint lang-prepro">
 Config:
 'view_manager' => array(
