Changed blog and added bc information

--- a/_posts/2012-11-10-getting-started-with-rest-and-zend-framework-2.html
+++ b/_posts/2012-11-10-getting-started-with-rest-and-zend-framework-2.html
@@ -12,6 +12,9 @@ summary: Building a Rest module module for Zend Framework 2
 
 <div class="row">
     <p>
+        <code>This Tutorial currently only works with zf2 <= 2.0.3 as there have been some updates pertaining the view strategy. I am currently working on a upgrade for this tutorial.</code>
+    </p>
+    <p>
         Today i want to show you how to build a rest application. This tutorials assume you have completed the <a href="http://zf2.readthedocs.org/en/latest/user-guide/overview.html">Getting Started</a>. I will be repeating lot of the steps allready explained in there. There is also a sample Album module which you can install from <a href="https://github.com/Hounddog/Album">here</a>.
     </p>
     <h1>
