Added link to Machaels blog

--- a/_posts/2012-11-18-performance-in-zend-framework-2.html
+++ b/_posts/2012-11-18-performance-in-zend-framework-2.html
@@ -15,7 +15,7 @@ summary: A listing of options to improve Performance using Zend Framework 2
         I am going to list options here on how to improve the Performance. This will be an ongoing list which i will keep updated while doing performance improvements.
     </p>
     <h1>Autoloader Classmap</h1>
-    <p>As described by Rob Allen on his <a href="http://akrabat.com/zend-framework-2/using-zendloaderautoloader/" target="_blank">Blog</a>.</>
+    <p>As described by Rob Allen on his <a href="http://akrabat.com/zend-framework-2/using-zendloaderautoloader/" target="_blank">Blog</a>.</p>
     <pre>
 The class map autoloader is a high performance autoloader. It uses class maps, which are simply associative arrays of each classname to the name of the file disk that contains that class.
     </pre>
